[Bug 884816] Fix flickering in the start page

--- a/kitsune/sumo/static/less/main.less
+++ b/kitsune/sumo/static/less/main.less
@@ -399,10 +399,11 @@ input[type=button],
     .gradient(#ccc, #ddd, #bbb);
     .border-radius(6px);
     .box-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
-    float: left;
-    margin: 0 10px 20px 10px;
+    display: inline-block;
+    margin: 0 8px 20px;
     padding: 1px;
     position: relative;
+    vertical-align: top;
     width: 298px;
     word-wrap: break-word;
     z-index: 1;
